infra/pre/yap-ingress-minimal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yap-services
  annotations:
    kubernetes.io/ingress.class: nginx
    # TLS and Let's Encrypt
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # Add TLS configuration
  tls:
  - hosts:
    - goyap.ai
    - www.goyap.ai
    secretName: yap-tls-secret
  rules:
    - host: goyap.ai
      http:
        paths:
          # serve the Angular front-end at the root path
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yap-landing
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
                  
          # Profile Service
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
                  
          # Offchain Profile
          - path: /offchain
            pathType: Prefix
            backend:
              service:
                name: offchain-profile
                port:
                  number: 80
    - host: www.goyap.ai
      http:
        paths:
          # serve the Angular front-end at the root path
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yap-landing
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
                  
          # Profile Service
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
                  
          # Offchain Profile
          - path: /offchain
            pathType: Prefix
            backend:
              service:
                name: offchain-profile
                port:
                  number: 80
